@@ -9,58 +9,38 @@
  ********************************************************************************/
 package org.eclipse.openvsx;
 
-import static org.eclipse.openvsx.entities.FileResource.*;
-import static org.eclipse.openvsx.entities.FileResource.CHANGELOG;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyCollection;
-import static org.mockito.ArgumentMatchers.eq;
-import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.csrf;
-import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.user;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.redirectedUrl;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
-
-import java.io.ByteArrayOutputStream;
-import java.io.IOException;
-import java.time.LocalDateTime;
-import java.util.*;
-import java.util.function.Consumer;
-import java.util.zip.ZipEntry;
-import java.util.zip.ZipOutputStream;
-
-import javax.persistence.EntityManager;
-
-import net.javacrumbs.shedlock.core.LockProvider;
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import io.micrometer.core.instrument.simple.SimpleMeterRegistry;
+import jakarta.persistence.EntityManager;
 import org.eclipse.openvsx.adapter.VSCodeIdService;
 import org.eclipse.openvsx.cache.CacheService;
 import org.eclipse.openvsx.cache.ExtensionJsonCacheKeyGenerator;
-import org.eclipse.openvsx.dto.ExtensionVersionDTO;
+import org.eclipse.openvsx.cache.LatestExtensionVersionCacheKeyGenerator;
 import org.eclipse.openvsx.eclipse.EclipseService;
 import org.eclipse.openvsx.entities.*;
-import org.eclipse.openvsx.json.ExtensionJson;
-import org.eclipse.openvsx.json.NamespaceJson;
-import org.eclipse.openvsx.json.ResultJson;
-import org.eclipse.openvsx.json.ReviewJson;
-import org.eclipse.openvsx.json.ReviewListJson;
-import org.eclipse.openvsx.json.SearchEntryJson;
-import org.eclipse.openvsx.json.SearchResultJson;
-import org.eclipse.openvsx.json.UserJson;
+import org.eclipse.openvsx.json.*;
+import org.eclipse.openvsx.publish.ExtensionVersionIntegrityService;
+import org.eclipse.openvsx.publish.PublishExtensionVersionHandler;
+import org.eclipse.openvsx.publish.PublishExtensionVersionService;
 import org.eclipse.openvsx.repositories.RepositoryService;
 import org.eclipse.openvsx.search.ExtensionSearch;
 import org.eclipse.openvsx.search.ISearchService;
 import org.eclipse.openvsx.search.SearchUtilService;
 import org.eclipse.openvsx.security.OAuth2UserServices;
+import org.eclipse.openvsx.security.SecurityConfig;
 import org.eclipse.openvsx.security.TokenService;
 import org.eclipse.openvsx.storage.AzureBlobStorageService;
 import org.eclipse.openvsx.storage.AzureDownloadCountService;
 import org.eclipse.openvsx.storage.GoogleCloudStorageService;
 import org.eclipse.openvsx.storage.StorageUtilService;
 import org.eclipse.openvsx.util.TargetPlatform;
-import org.elasticsearch.search.aggregations.Aggregations;
+import org.eclipse.openvsx.util.VersionService;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.ValueSource;
 import org.mockito.Mockito;
+import org.mockito.stubbing.Answer;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.client.AutoConfigureWebClient;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
@@ -68,7 +48,10 @@ import org.springframework.boot.test.context.TestConfiguration;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.boot.test.mock.mockito.SpyBean;
 import org.springframework.context.annotation.Bean;
-import org.springframework.data.domain.PageRequest;
+import org.springframework.context.annotation.Import;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
 import org.springframework.data.elasticsearch.core.SearchHit;
 import org.springframework.data.elasticsearch.core.SearchHitsImpl;
 import org.springframework.data.elasticsearch.core.TotalHitsRelation;
@@ -78,15 +61,30 @@ import org.springframework.security.oauth2.client.registration.ClientRegistratio
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.transaction.support.TransactionTemplate;
 
-import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.databind.ObjectMapper;
+import java.io.ByteArrayOutputStream;
+import java.io.IOException;
+import java.time.LocalDateTime;
+import java.util.*;
+import java.util.function.BiFunction;
+import java.util.function.Consumer;
+import java.util.stream.Collectors;
+import java.util.zip.ZipEntry;
+import java.util.zip.ZipOutputStream;
+
+import static org.eclipse.openvsx.entities.FileResource.*;
+import static org.mockito.ArgumentMatchers.*;
+import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.csrf;
+import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.user;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
 @WebMvcTest(RegistryAPI.class)
 @AutoConfigureWebClient
 @MockBean({
     ClientRegistrationRepository.class, UpstreamRegistryService.class, GoogleCloudStorageService.class,
-    AzureBlobStorageService.class, VSCodeIdService.class, AzureDownloadCountService.class, LockProvider.class,
-    CacheService.class
+    AzureBlobStorageService.class, VSCodeIdService.class, AzureDownloadCountService.class, CacheService.class,
+    EclipseService.class, PublishExtensionVersionService.class, SimpleMeterRegistry.class
 })
 public class RegistryAPITest {
 
@@ -100,22 +98,25 @@ public class RegistryAPITest {
     SearchUtilService search;
 
     @MockBean
-    EntityManager entityManager;
+    ExtensionVersionIntegrityService integrityService;
 
     @MockBean
-    EclipseService eclipse;
+    EntityManager entityManager;
 
     @Autowired
     MockMvc mockMvc;
 
     @Autowired
-    ExtensionService extensionService;
+    ExtensionService extensions;
+
+    @Autowired
+    VersionService versions;
 
     @Test
     public void testPublicNamespace() throws Exception {
         var namespace = mockNamespace();
         Mockito.when(repositories.countMemberships(namespace, NamespaceMembership.ROLE_OWNER))
-                .thenReturn(0l);
+                .thenReturn(0L);
         
         mockMvc.perform(get("/api/{namespace}", "foobar"))
                 .andExpect(status().isOk())
@@ -131,7 +132,7 @@ public class RegistryAPITest {
         var user = new UserData();
         user.setLoginName("test_user");
         Mockito.when(repositories.countMemberships(namespace, NamespaceMembership.ROLE_OWNER))
-                .thenReturn(1l);
+                .thenReturn(1L);
 
         mockMvc.perform(get("/api/{namespace}", "foobar"))
                 .andExpect(status().isOk())
@@ -161,6 +162,23 @@ public class RegistryAPITest {
                     e.verified = false;
                     e.timestamp = "2000-01-01T10:00Z";
                     e.displayName = "Foo Bar";
+                })));
+    }
+
+    @Test
+    public void testExtensionWithPublicKey() throws Exception {
+        Mockito.when(integrityService.isEnabled()).thenReturn(true);
+        var extVersion = mockExtensionWithSignature();
+        var keyPair = new SignatureKeyPair();
+        keyPair.setPublicId("123-456-7890");
+        extVersion.setSignatureKeyPair(keyPair);
+        mockMvc.perform(get("/api/{namespace}/{extension}", "foo", "bar"))
+                .andExpect(status().isOk())
+                .andExpect(content().json(extensionJson(e -> {
+                    e.namespace = "foo";
+                    e.name = "bar";
+                    e.version = "1.0.0";
+                    e.files = Map.of("publicKey", "http://localhost/api/-/public-key/" + keyPair.getPublicId());
                 })));
     }
 
@@ -463,6 +481,14 @@ public class RegistryAPITest {
     }
 
     @Test
+    public void testLatestFile() throws Exception {
+        mockLatest();
+        mockMvc.perform(get("/api/{namespace}/{extension}/{version}/file/{fileName}", "foo", "bar", "latest", "DOWNLOAD"))
+                .andExpect(status().isOk())
+                .andExpect(content().string("latest download"));
+    }
+
+    @Test
     public void testReviews() throws Exception {
         mockReviews();
         mockMvc.perform(get("/api/{namespace}/{extension}/reviews", "foo", "bar"))
@@ -507,10 +533,10 @@ public class RegistryAPITest {
 
     @Test
     public void testSearchInactive() throws Exception {
-        var extensions = mockSearch();
-        extensions.forEach(extension -> {
+        var extensionsList = mockSearch();
+        extensionsList.forEach(extension -> {
             extension.setActive(false);
-            extension.getLatest().setActive(false);
+            versions.getLatest(extension, null, false, false).setActive(false);
         });
 
         mockMvc.perform(get("/api/-/search?query={query}&size={size}&offset={offset}", "foo", "10", "0"))
@@ -520,7 +546,7 @@ public class RegistryAPITest {
 
     @Test
     public void testGetQueryExtensionName() throws Exception {
-        mockExtensionVersionDTO();
+        mockExtensionVersion();
         mockMvc.perform(get("/api/-/query?extensionName={extensionName}", "bar"))
                 .andExpect(status().isOk())
                 .andExpect(content().json(queryResultJson(e -> {
@@ -535,7 +561,7 @@ public class RegistryAPITest {
 
     @Test
     public void testGetQueryNamespace() throws Exception {
-        mockExtensionVersionDTO();
+        mockExtensionVersion();
         mockMvc.perform(get("/api/-/query?namespaceName={namespaceName}", "foo"))
                 .andExpect(status().isOk())
                 .andExpect(content().json(queryResultJson(e -> {
@@ -550,8 +576,8 @@ public class RegistryAPITest {
 
     @Test
     public void testGetQueryUnknownExtension() throws Exception {
-        mockExtensionVersionDTO();
-        Mockito.when(repositories.findActiveExtensionVersionDTOsByExtensionName(TargetPlatform.NAME_UNIVERSAL, "baz"))
+        mockExtensionVersion();
+        Mockito.when(repositories.findActiveExtensionVersionsByExtensionName(TargetPlatform.NAME_UNIVERSAL, "baz"))
                 .thenReturn(Collections.emptyList());
 
         mockMvc.perform(get("/api/-/query?extensionName={extensionName}", "baz"))
@@ -564,7 +590,7 @@ public class RegistryAPITest {
         var namespaceName = "foo";
         var extensionName = "bar";
 
-        mockInactiveExtensionVersionDTO(namespaceName, extensionName);
+        mockInactiveExtensionVersion(namespaceName, extensionName);
         mockMvc.perform(get("/api/-/query?extensionId={namespaceName}.{extensionName}", namespaceName, extensionName))
                 .andExpect(status().isOk())
                 .andExpect(content().json("{ \"extensions\": [] }"));
@@ -572,7 +598,7 @@ public class RegistryAPITest {
 
     @Test
     public void testGetQueryExtensionId() throws Exception {
-        mockExtensionVersionDTO();
+        mockExtensionVersion();
         mockMvc.perform(get("/api/-/query?extensionId={extensionId}", "foo.bar"))
                 .andExpect(status().isOk())
                 .andExpect(content().json(queryResultJson(e -> {
@@ -586,8 +612,23 @@ public class RegistryAPITest {
     }
 
     @Test
+    public void testGetQueryExtensionVersion() throws Exception {
+        mockExtensionVersion();
+        mockMvc.perform(get("/api/-/query?extensionId={id}&extensionVersion={version}", "foo.bar", "1.0.0"))
+                .andExpect(status().isOk())
+                .andExpect(content().json(queryResultJson(e -> {
+                    e.namespace = "foo";
+                    e.name = "bar";
+                    e.version = "1.0.0";
+                    e.verified = false;
+                    e.timestamp = "2000-01-01T10:00Z";
+                    e.displayName = "Foo Bar";
+                })));
+    }
+
+    @Test
     public void testGetQueryExtensionUuid() throws Exception {
-        mockExtensionVersionDTO();
+        mockExtensionVersion();
         mockMvc.perform(get("/api/-/query?extensionUuid={extensionUuid}", "5678"))
                 .andExpect(status().isOk())
                 .andExpect(content().json(queryResultJson(e -> {
@@ -602,7 +643,7 @@ public class RegistryAPITest {
 
     @Test
     public void testGetQueryNamespaceUuid() throws Exception {
-        mockExtensionVersionDTO();
+        mockExtensionVersion();
         mockMvc.perform(get("/api/-/query?namespaceUuid={namespaceUuid}", "1234"))
                 .andExpect(status().isOk())
                 .andExpect(content().json(queryResultJson(e -> {
@@ -617,7 +658,14 @@ public class RegistryAPITest {
 
     @Test
     public void testGetQueryMultipleTargets() throws Exception {
-        mockExtensionVersionDTOs();
+        var versions = mockExtensionVersionTargetPlatforms();
+        var query = new QueryRequest();
+        query.namespaceUuid = "1234";
+        query.offset = 0;
+        query.size = 100;
+        Mockito.when(repositories.findActiveVersions(query))
+                .thenReturn(new PageImpl<>(versions, Pageable.ofSize(100), versions.size()));
+
         mockMvc.perform(get("/api/-/query?namespaceUuid={namespaceUuid}", "1234"))
                 .andExpect(status().isOk())
                 .andExpect(content().json(queryResultJson(e -> {
@@ -650,11 +698,9 @@ public class RegistryAPITest {
     }
 
     @Test
-    public void testPostQueryExtensionName() throws Exception {
-        mockExtensionVersionDTO();
-        mockMvc.perform(post("/api/-/query")
-                .contentType(MediaType.APPLICATION_JSON)
-                .content("{ \"extensionName\": \"bar\" }"))
+    public void testGetQueryV2ExtensionName() throws Exception {
+        mockExtensionVersion();
+        mockMvc.perform(get("/api/v2/-/query?extensionName={extensionName}", "bar"))
                 .andExpect(status().isOk())
                 .andExpect(content().json(queryResultJson(e -> {
                     e.namespace = "foo";
@@ -664,97 +710,490 @@ public class RegistryAPITest {
                     e.timestamp = "2000-01-01T10:00Z";
                     e.displayName = "Foo Bar";
                 })));
+    }
+
+    @Test
+    public void testGetQueryV2Namespace() throws Exception {
+        mockExtensionVersion();
+        mockMvc.perform(get("/api/v2/-/query?namespaceName={namespaceName}", "foo"))
+                .andExpect(status().isOk())
+                .andExpect(content().json(queryResultJson(e -> {
+                    e.namespace = "foo";
+                    e.name = "bar";
+                    e.version = "1.0.0";
+                    e.verified = false;
+                    e.timestamp = "2000-01-01T10:00Z";
+                    e.displayName = "Foo Bar";
+                })));
+    }
+
+    @Test
+    public void testGetQueryV2UnknownExtension() throws Exception {
+        mockExtensionVersion();
+        Mockito.when(repositories.findActiveExtensionVersionsByExtensionName(TargetPlatform.NAME_UNIVERSAL, "baz"))
+                .thenReturn(Collections.emptyList());
+
+        mockMvc.perform(get("/api/v2/-/query?extensionName={extensionName}", "baz"))
+                .andExpect(status().isOk())
+                .andExpect(content().json("{ \"extensions\": [] }"));
+    }
+
+    @Test
+    public void testGetQueryV2InactiveExtension() throws Exception {
+        var namespaceName = "foo";
+        var extensionName = "bar";
+
+        mockInactiveExtensionVersion(namespaceName, extensionName);
+        mockMvc.perform(get("/api/v2/-/query?extensionId={namespaceName}.{extensionName}", namespaceName, extensionName))
+                .andExpect(status().isOk())
+                .andExpect(content().json("{ \"extensions\": [] }"));
+    }
+
+    @Test
+    public void testGetQueryV2ExtensionId() throws Exception {
+        mockExtensionVersion();
+        mockMvc.perform(get("/api/v2/-/query?extensionId={extensionId}", "foo.bar"))
+                .andExpect(status().isOk())
+                .andExpect(content().json(queryResultJson(e -> {
+                    e.namespace = "foo";
+                    e.name = "bar";
+                    e.version = "1.0.0";
+                    e.verified = false;
+                    e.timestamp = "2000-01-01T10:00Z";
+                    e.displayName = "Foo Bar";
+                })));
+    }
+
+    @Test
+    public void testGetQueryV2IncludeAllVersionsTrue() throws Exception {
+        var versions = mockExtensionVersionVersionsTargetPlatforms();
+        var query = new QueryRequest();
+        query.namespaceName = "foo";
+        query.extensionName = "bar";
+        query.includeAllVersions = true;
+        query.offset = 0;
+        query.size = 100;
+        Mockito.when(repositories.findActiveVersions(query))
+                .thenReturn(new PageImpl<>(versions, Pageable.ofSize(100), versions.size()));
+
+        mockMvc.perform(get("/api/v2/-/query?extensionId={extensionId}&includeAllVersions={includeAllVersions}", "foo.bar", "true"))
+                .andExpect(status().isOk())
+                .andExpect(content().json(queryResultJson(e -> {
+                    e.namespace = "foo";
+                    e.name = "bar";
+                    e.version = "1.0.0";
+                    e.targetPlatform = "darwin-x64";
+                    e.verified = false;
+                    e.timestamp = "2000-01-01T10:00Z";
+                    e.displayName = "Foo Bar";
+                    e.allVersions = null;
+                    e.url = "http://localhost/api/foo/bar/darwin-x64/1.0.0";
+                },
+                e -> {
+                    e.namespace = "foo";
+                    e.name = "bar";
+                    e.version = "2.0.0";
+                    e.targetPlatform = "darwin-x64";
+                    e.verified = false;
+                    e.timestamp = "2000-01-01T10:00Z";
+                    e.displayName = "Foo Bar";
+                    e.allVersions = null;
+                    e.url = "http://localhost/api/foo/bar/darwin-x64/2.0.0";
+                },
+                e -> {
+                    e.namespace = "foo";
+                    e.name = "bar";
+                    e.version = "1.0.0";
+                    e.targetPlatform = "linux-x64";
+                    e.verified = false;
+                    e.timestamp = "2000-01-01T10:00Z";
+                    e.displayName = "Foo Bar";
+                    e.allVersions = null;
+                    e.url = "http://localhost/api/foo/bar/linux-x64/1.0.0";
+                },
+                e -> {
+                    e.namespace = "foo";
+                    e.name = "bar";
+                    e.version = "2.0.0";
+                    e.targetPlatform = "linux-x64";
+                    e.verified = false;
+                    e.timestamp = "2000-01-01T10:00Z";
+                    e.displayName = "Foo Bar";
+                    e.allVersions = null;
+                    e.url = "http://localhost/api/foo/bar/linux-x64/2.0.0";
+                })));
+    }
+
+    @Test
+    public void testGetQueryV2IncludeAllVersionsFalse() throws Exception {
+        var versions = mockExtensionVersionVersions();
+        var query = new QueryRequest();
+        query.namespaceName = "foo";
+        query.extensionName = "bar";
+        query.includeAllVersions = false;
+        query.offset = 0;
+        query.size = 100;
+        versions = versions.stream().filter(ev -> ev.getVersion().equals("3.0.0")).collect(Collectors.toList());
+        Mockito.when(repositories.findActiveVersions(query))
+                .thenReturn(new PageImpl<>(versions, Pageable.ofSize(100), versions.size()));
+
+        mockMvc.perform(get("/api/v2/-/query?extensionId={extensionId}&includeAllVersions={includeAllVersions}", "foo.bar", "false"))
+                .andExpect(status().isOk())
+                .andExpect(content().json(queryResultJson(e -> {
+                    e.namespace = "foo";
+                    e.name = "bar";
+                    e.version = "3.0.0";
+                    e.versionAlias = List.of("latest");
+                    e.verified = false;
+                    e.timestamp = "2000-01-01T10:00Z";
+                    e.displayName = "Foo Bar";
+                    e.allVersions = null;
+                    e.url = "http://localhost/api/foo/bar/universal/3.0.0";
+                })));
+    }
+
+    @Test
+    public void testGetQueryV2IncludeAllVersionsLinks() throws Exception {
+        var versions = mockExtensionVersionVersions();
+        var query = new QueryRequest();
+        query.namespaceName = "foo";
+        query.extensionName = "bar";
+        query.includeAllVersions = false;
+        query.offset = 0;
+        query.size = 100;
+        versions = versions.stream().filter(ev -> ev.getVersion().equals("3.0.0")).collect(Collectors.toList());
+        Mockito.when(repositories.findActiveVersions(query))
+                .thenReturn(new PageImpl<>(versions, Pageable.ofSize(100), versions.size()));
+
+        mockMvc.perform(get("/api/v2/-/query?extensionId={extensionId}&includeAllVersions={includeAllVersions}", "foo.bar", "links"))
+                .andExpect(status().isOk())
+                .andExpect(content().json(queryResultJson(e -> {
+                    e.namespace = "foo";
+                    e.name = "bar";
+                    e.version = "3.0.0";
+                    e.versionAlias = List.of("latest");
+                    e.verified = false;
+                    e.timestamp = "2000-01-01T10:00Z";
+                    e.displayName = "Foo Bar";
+                    e.allVersions = Map.of(
+                            "latest", "http://localhost/api/foo/bar/latest",
+                            "3.0.0", "http://localhost/api/foo/bar/3.0.0",
+                            "2.0.0", "http://localhost/api/foo/bar/2.0.0",
+                            "1.0.0", "http://localhost/api/foo/bar/1.0.0"
+                    );
+                    e.url = "http://localhost/api/foo/bar/universal/3.0.0";
+                })));
+    }
+
+    @Test
+    public void testGetQueryV2MultipleTargetsIncludeAllVersionsLinks() throws Exception {
+        var versions = mockExtensionVersionVersionsTargetPlatforms();
+        var query = new QueryRequest();
+        query.namespaceName = "foo";
+        query.extensionName = "bar";
+        query.includeAllVersions = false;
+        query.offset = 0;
+        query.size = 100;
+        versions = versions.stream().filter(ev -> ev.getVersion().equals("2.0.0")).collect(Collectors.toList());
+        Mockito.when(repositories.findActiveVersions(query))
+                .thenReturn(new PageImpl<>(versions, Pageable.ofSize(100), versions.size()));
+
+        mockMvc.perform(get("/api/v2/-/query?extensionId={extensionId}&includeAllVersions={includeAllVersions}", "foo.bar", "links"))
+                .andExpect(status().isOk())
+                .andExpect(content().json(queryResultJson(e -> {
+                    e.namespace = "foo";
+                    e.name = "bar";
+                    e.version = "2.0.0";
+                    e.targetPlatform = "darwin-x64";
+                    e.versionAlias = List.of("latest");
+                    e.verified = false;
+                    e.timestamp = "2000-01-01T10:00Z";
+                    e.displayName = "Foo Bar";
+                    e.allVersions = Map.of(
+                            "latest", "http://localhost/api/foo/bar/latest",
+                            "2.0.0", "http://localhost/api/foo/bar/2.0.0",
+                            "1.0.0", "http://localhost/api/foo/bar/1.0.0"
+                    );
+                    e.url = "http://localhost/api/foo/bar/darwin-x64/2.0.0";
+                },
+                e -> {
+                    e.namespace = "foo";
+                    e.name = "bar";
+                    e.version = "2.0.0";
+                    e.targetPlatform = "linux-x64";
+                    e.versionAlias = List.of("latest");
+                    e.verified = false;
+                    e.timestamp = "2000-01-01T10:00Z";
+                    e.displayName = "Foo Bar";
+                    e.allVersions = Map.of(
+                            "latest", "http://localhost/api/foo/bar/latest",
+                            "2.0.0", "http://localhost/api/foo/bar/2.0.0",
+                            "1.0.0", "http://localhost/api/foo/bar/1.0.0"
+                    );
+                    e.url = "http://localhost/api/foo/bar/linux-x64/2.0.0";
+                })));
+    }
+
+    @Test
+    public void testGetQueryV2TargetPlatformIncludeAllVersionsTrue() throws Exception {
+        var versions = mockExtensionVersionVersionsTargetPlatforms("linux-x64");
+        var query = new QueryRequest();
+        query.namespaceName = "foo";
+        query.extensionName = "bar";
+        query.targetPlatform = "linux-x64";
+        query.includeAllVersions = true;
+        query.offset = 0;
+        query.size = 100;
+        Mockito.when(repositories.findActiveVersions(query))
+                .thenReturn(new PageImpl<>(versions, Pageable.ofSize(100), versions.size()));
+
+        mockMvc.perform(get("/api/v2/-/query?extensionId={extensionId}&targetPlatform={targetPlatform}&includeAllVersions={includeAllVersions}", "foo.bar", "linux-x64", "true"))
+                .andExpect(status().isOk())
+                .andExpect(content().json(queryResultJson(e -> {
+                    e.namespace = "foo";
+                    e.name = "bar";
+                    e.version = "1.0.0";
+                    e.targetPlatform = "linux-x64";
+                    e.verified = false;
+                    e.timestamp = "2000-01-01T10:00Z";
+                    e.displayName = "Foo Bar";
+                    e.allVersions = null;
+                    e.url = "http://localhost/api/foo/bar/linux-x64/1.0.0";
+                },
+                e -> {
+                    e.namespace = "foo";
+                    e.name = "bar";
+                    e.version = "2.0.0";
+                    e.targetPlatform = "linux-x64";
+                    e.verified = false;
+                    e.timestamp = "2000-01-01T10:00Z";
+                    e.displayName = "Foo Bar";
+                    e.allVersions = null;
+                    e.url = "http://localhost/api/foo/bar/linux-x64/2.0.0";
+                })));
+    }
+
+    @Test
+    public void testGetQueryV2ExtensionVersionIncludeAllVersionsTrue() throws Exception {
+        var versions = mockExtensionVersionVersionsTargetPlatforms();
+        var query = new QueryRequest();
+        query.namespaceName = "foo";
+        query.extensionName = "bar";
+        query.extensionVersion = "2.0.0";
+        query.includeAllVersions = false;
+        query.offset = 0;
+        query.size = 100;
+        versions = versions.stream().filter(ev -> ev.getVersion().equals("2.0.0")).collect(Collectors.toList());
+        Mockito.when(repositories.findActiveVersions(query))
+                .thenReturn(new PageImpl<>(versions, Pageable.ofSize(100), versions.size()));
+
+        mockMvc.perform(get("/api/v2/-/query?extensionId={extensionId}&extensionVersion={extensionVersion}&includeAllVersions={includeAllVersions}", "foo.bar", "2.0.0", "true"))
+                .andExpect(status().isOk())
+                .andExpect(content().json(queryResultJson(e -> {
+                    e.namespace = "foo";
+                    e.name = "bar";
+                    e.version = "2.0.0";
+                    e.targetPlatform = "darwin-x64";
+                    e.verified = false;
+                    e.timestamp = "2000-01-01T10:00Z";
+                    e.displayName = "Foo Bar";
+                    e.allVersions = null;
+                    e.url = "http://localhost/api/foo/bar/darwin-x64/2.0.0";
+                },
+                e -> {
+                    e.namespace = "foo";
+                    e.name = "bar";
+                    e.version = "2.0.0";
+                    e.targetPlatform = "linux-x64";
+                    e.verified = false;
+                    e.timestamp = "2000-01-01T10:00Z";
+                    e.displayName = "Foo Bar";
+                    e.allVersions = null;
+                    e.url = "http://localhost/api/foo/bar/linux-x64/2.0.0";
+                })));
+    }
+
+    @Test
+    public void testGetQueryV2ExtensionVersionIncludeAllVersionsFalse() throws Exception {
+        var versions = mockExtensionVersionVersions();
+        var query = new QueryRequest();
+        query.namespaceName = "foo";
+        query.extensionName = "bar";
+        query.extensionVersion = "2.0.0";
+        query.includeAllVersions = false;
+        query.offset = 0;
+        query.size = 100;
+        versions = versions.stream().filter(ev -> ev.getVersion().equals("2.0.0")).collect(Collectors.toList());
+        Mockito.when(repositories.findActiveVersions(query))
+                .thenReturn(new PageImpl<>(versions, Pageable.ofSize(100), versions.size()));
+
+        mockMvc.perform(get("/api/v2/-/query?extensionId={extensionId}&extensionVersion={extensionVersion}&includeAllVersions={includeAllVersions}", "foo.bar", "2.0.0", "false"))
+                .andExpect(status().isOk())
+                .andExpect(content().json(queryResultJson(e -> {
+                    e.namespace = "foo";
+                    e.name = "bar";
+                    e.version = "2.0.0";
+                    e.verified = false;
+                    e.timestamp = "2000-01-01T10:00Z";
+                    e.displayName = "Foo Bar";
+                    e.allVersions = null;
+                    e.url = "http://localhost/api/foo/bar/universal/2.0.0";
+                })));
+    }
+
+    @Test
+    public void testGetQueryV2ExtensionVersionIncludeAllVersionsLinks() throws Exception {
+        var versions = mockExtensionVersionVersions();
+        var query = new QueryRequest();
+        query.namespaceName = "foo";
+        query.extensionName = "bar";
+        query.extensionVersion = "2.0.0";
+        query.includeAllVersions = false;
+        query.offset = 0;
+        query.size = 100;
+        versions = versions.stream().filter(ev -> ev.getVersion().equals("2.0.0")).collect(Collectors.toList());
+        Mockito.when(repositories.findActiveVersions(query))
+                .thenReturn(new PageImpl<>(versions, Pageable.ofSize(100), versions.size()));
+
+        mockMvc.perform(get("/api/v2/-/query?extensionId={extensionId}&extensionVersion={extensionVersion}&includeAllVersions={includeAllVersions}", "foo.bar", "2.0.0", "links"))
+                .andExpect(status().isOk())
+                .andExpect(content().json(queryResultJson(e -> {
+                    e.namespace = "foo";
+                    e.name = "bar";
+                    e.version = "2.0.0";
+                    e.verified = false;
+                    e.timestamp = "2000-01-01T10:00Z";
+                    e.displayName = "Foo Bar";
+                    e.allVersions = Map.of(
+                            "latest", "http://localhost/api/foo/bar/latest",
+                            "3.0.0", "http://localhost/api/foo/bar/3.0.0",
+                            "2.0.0", "http://localhost/api/foo/bar/2.0.0",
+                            "1.0.0", "http://localhost/api/foo/bar/1.0.0"
+                    );
+                    e.url = "http://localhost/api/foo/bar/universal/2.0.0";
+                })));
+    }
+
+    @Test
+    public void testGetQueryV2ExtensionUuid() throws Exception {
+        mockExtensionVersion();
+        mockMvc.perform(get("/api/v2/-/query?extensionUuid={extensionUuid}", "5678"))
+                .andExpect(status().isOk())
+                .andExpect(content().json(queryResultJson(e -> {
+                    e.namespace = "foo";
+                    e.name = "bar";
+                    e.version = "1.0.0";
+                    e.verified = false;
+                    e.timestamp = "2000-01-01T10:00Z";
+                    e.displayName = "Foo Bar";
+                })));
+    }
+
+    @Test
+    public void testGetQueryV2NamespaceUuid() throws Exception {
+        mockExtensionVersion();
+        mockMvc.perform(get("/api/v2/-/query?namespaceUuid={namespaceUuid}", "1234"))
+                .andExpect(status().isOk())
+                .andExpect(content().json(queryResultJson(e -> {
+                    e.namespace = "foo";
+                    e.name = "bar";
+                    e.version = "1.0.0";
+                    e.verified = false;
+                    e.timestamp = "2000-01-01T10:00Z";
+                    e.displayName = "Foo Bar";
+                })));
+    }
+
+    @Test
+    public void testGetQueryV2MultipleTargets() throws Exception {
+        var versions = mockExtensionVersionTargetPlatforms();
+        var query = new QueryRequest();
+        query.namespaceUuid = "1234";
+        query.includeAllVersions = false;
+        query.offset = 0;
+        query.size = 100;
+        Mockito.when(repositories.findActiveVersions(query))
+                .thenReturn(new PageImpl<>(versions, Pageable.ofSize(100), versions.size()));
+
+        mockMvc.perform(get("/api/v2/-/query?namespaceUuid={namespaceUuid}", "1234"))
+                .andExpect(status().isOk())
+                .andExpect(content().json(queryResultJson(e -> {
+                    e.namespace = "foo";
+                    e.name = "bar";
+                    e.version = "1.0.0";
+                    e.verified = false;
+                    e.timestamp = "2000-01-01T10:00Z";
+                    e.displayName = "Foo Bar";
+                    e.targetPlatform = "darwin-x64";
+                },
+                e -> {
+                    e.namespace = "foo";
+                    e.name = "bar";
+                    e.version = "1.0.0";
+                    e.verified = false;
+                    e.timestamp = "2000-01-01T10:00Z";
+                    e.displayName = "Foo Bar";
+                    e.targetPlatform = "linux-x64";
+                },
+                e -> {
+                    e.namespace = "foo";
+                    e.name = "bar";
+                    e.version = "1.0.0";
+                    e.verified = false;
+                    e.timestamp = "2000-01-01T10:00Z";
+                    e.displayName = "Foo Bar";
+                    e.targetPlatform = "alpine-arm64";
+                })));
+    }
+
+    @Test
+    public void testPostQueryExtensionName() throws Exception {
+        mockExtensionVersion();
+        mockMvc.perform(post("/api/-/query")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content("{ \"extensionName\": \"bar\" }"))
+                .andExpect(status().isMovedPermanently())
+                .andExpect(header().string("Location", "http://localhost/api/-/query?extensionName=bar&includeAllVersions=false"));
     }
 
     @Test
     public void testPostQueryNamespace() throws Exception {
-        mockExtensionVersionDTO();
+        mockExtensionVersion();
         mockMvc.perform(post("/api/-/query")
                 .contentType(MediaType.APPLICATION_JSON)
                 .content("{ \"namespaceName\": \"foo\" }"))
-                .andExpect(status().isOk())
-                .andExpect(content().json(queryResultJson(e -> {
-                    e.namespace = "foo";
-                    e.name = "bar";
-                    e.version = "1.0.0";
-                    e.verified = false;
-                    e.timestamp = "2000-01-01T10:00Z";
-                    e.displayName = "Foo Bar";
-                })));
-    }
-
-    @Test
-    public void testPostQueryUnknownExtension() throws Exception {
-        mockExtensionVersionDTO();
-        Mockito.when(repositories.findActiveExtensionVersionDTOsByExtensionName(null, "baz"))
-                .thenReturn(Collections.emptyList());
-
-        mockMvc.perform(post("/api/-/query")
-                .contentType(MediaType.APPLICATION_JSON)
-                .content("{ \"extensionName\": \"baz\" }"))
-                .andExpect(status().isOk())
-                .andExpect(content().json("{ \"extensions\": [] }"));
-    }
-
-    @Test
-    public void testPostQueryInactiveExtension() throws Exception {
-        mockInactiveExtensionVersionDTO("foo", "bar");
-        mockMvc.perform(post("/api/-/query")
-                .contentType(MediaType.APPLICATION_JSON)
-                .content("{ \"extensionId\": \"foo.bar\" }"))
-                .andExpect(status().isOk())
-                .andExpect(content().json("{ \"extensions\": [] }"));
+                .andExpect(status().isMovedPermanently())
+                .andExpect(header().string("Location", "http://localhost/api/-/query?namespaceName=foo&includeAllVersions=false"));
     }
 
     @Test
     public void testPostQueryExtensionId() throws Exception {
-        mockExtensionVersionDTO();
+        mockExtensionVersion();
         mockMvc.perform(post("/api/-/query")
                 .contentType(MediaType.APPLICATION_JSON)
                 .content("{ \"extensionId\": \"foo.bar\" }"))
-                .andExpect(status().isOk())
-                .andExpect(content().json(queryResultJson(e -> {
-                    e.namespace = "foo";
-                    e.name = "bar";
-                    e.version = "1.0.0";
-                    e.verified = false;
-                    e.timestamp = "2000-01-01T10:00Z";
-                    e.displayName = "Foo Bar";
-                })));
+                .andExpect(status().isMovedPermanently())
+                .andExpect(header().string("Location", "http://localhost/api/-/query?extensionId=foo.bar&includeAllVersions=false"));
     }
 
     @Test
     public void testPostQueryExtensionUuid() throws Exception {
-        mockExtensionVersionDTO();
+        mockExtensionVersion();
         mockMvc.perform(post("/api/-/query")
                 .contentType(MediaType.APPLICATION_JSON)
                 .content("{ \"extensionUuid\": \"5678\" }"))
-                .andExpect(status().isOk())
-                .andExpect(content().json(queryResultJson(e -> {
-                    e.namespace = "foo";
-                    e.name = "bar";
-                    e.version = "1.0.0";
-                    e.verified = false;
-                    e.timestamp = "2000-01-01T10:00Z";
-                    e.displayName = "Foo Bar";
-                })));
+                .andExpect(status().isMovedPermanently())
+                .andExpect(header().string("Location", "http://localhost/api/-/query?extensionUuid=5678&includeAllVersions=false"));
     }
 
     @Test
     public void testPostQueryNamespaceUuid() throws Exception {
-        mockExtensionVersionDTO();
+        mockExtensionVersion();
         mockMvc.perform(post("/api/-/query")
                 .contentType(MediaType.APPLICATION_JSON)
                 .content("{ \"namespaceUuid\": \"1234\" }"))
-                .andExpect(status().isOk())
-                .andExpect(content().json(queryResultJson(e -> {
-                    e.namespace = "foo";
-                    e.name = "bar";
-                    e.version = "1.0.0";
-                    e.verified = false;
-                    e.timestamp = "2000-01-01T10:00Z";
-                    e.displayName = "Foo Bar";
-                })));
+                .andExpect(status().isMovedPermanently())
+                .andExpect(header().string("Location", "http://localhost/api/-/query?namespaceUuid=1234&includeAllVersions=false"));
     }
 
     @Test
@@ -813,6 +1252,49 @@ public class RegistryAPITest {
                 .andExpect(status().isBadRequest())
                 .andExpect(content().json(errorJson("Namespace already exists: foobar")));
     }
+
+    @ParameterizedTest
+    @ValueSource(strings = {"owner", "contributor", "sole-contributor"})
+    public void testVerifyToken(String mode) throws Exception {
+        mockForPublish(mode);
+
+        mockMvc.perform(get("/api/{namespace}/verify-pat?token={token}", "foo", "my_token"))
+                .andExpect(status().isOk());
+    }
+
+    @Test
+    public void testVerifyTokenNoNamespace() throws Exception {
+        mockAccessToken();
+
+        mockMvc.perform(get("/api/{namespace}/verify-pat?token={token}", "unexistingnamespace", "my_token"))
+                .andExpect(status().isNotFound());
+    }
+
+    @Test
+    public void testVerifyTokenInvalid() throws Exception {
+        mockForPublish("invalid");
+
+        mockMvc.perform(get("/api/{namespace}/verify-pat?token={token}", "foo", "my_token"))
+                .andExpect(status().isBadRequest());
+    }
+
+    @Test
+    public void testVerifyTokenNoToken() throws Exception {
+        mockAccessToken();
+        mockNamespace();
+
+        mockMvc.perform(get("/api/{namespace}/verify-pat", "foobar"))
+                .andExpect(status().isBadRequest());
+    }
+
+    @Test
+    public void testVerifyTokenNoPermission() throws Exception {
+        mockAccessToken();
+        mockNamespace();
+
+        mockMvc.perform(get("/api/{namespace}/verify-pat?token={token}", "foobar", "my_token"))
+                .andExpect(status().isBadRequest());
+    }
     
     @Test
     public void testPublishOrphan() throws Exception {
@@ -827,9 +1309,9 @@ public class RegistryAPITest {
     
     @Test
     public void testPublishRequireLicenseNone() throws Exception {
-        var previousRequireLicense = extensionService.requireLicense;
+        var previousRequireLicense = extensions.requireLicense;
         try {
-            extensionService.requireLicense = true;
+            extensions.requireLicense = true;
             mockForPublish("contributor");
             var bytes = createExtensionPackage("bar", "1.0.0", null);
             mockMvc.perform(post("/api/-/publish?token={token}", "my_token")
@@ -838,15 +1320,15 @@ public class RegistryAPITest {
                     .andExpect(status().isBadRequest())
                     .andExpect(content().json(errorJson("This extension cannot be accepted because it has no license.")));
         } finally {
-            extensionService.requireLicense = previousRequireLicense;
+            extensions.requireLicense = previousRequireLicense;
         }
     }
     
     @Test
     public void testPublishRequireLicenseOk() throws Exception {
-        var previousRequireLicense = extensionService.requireLicense;
+        var previousRequireLicense = extensions.requireLicense;
         try {
-            extensionService.requireLicense = true;
+            extensions.requireLicense = true;
             mockForPublish("contributor");
             mockActiveVersion();
             var bytes = createExtensionPackage("bar", "1.0.0", "MIT");
@@ -864,7 +1346,7 @@ public class RegistryAPITest {
                         e.verified = true;
                     })));
         } finally {
-            extensionService.requireLicense = previousRequireLicense;
+            extensions.requireLicense = previousRequireLicense;
         }
     }
     
@@ -967,7 +1449,7 @@ public class RegistryAPITest {
                     var u = new UserJson();
                     u.loginName = "test_user";
                     e.publishedBy = u;
-                    e.verified = false;
+                    e.verified = true;
                 })));
     }
 
@@ -1008,7 +1490,7 @@ public class RegistryAPITest {
                 .contentType(MediaType.APPLICATION_OCTET_STREAM)
                 .content(bytes))
                 .andExpect(status().isCreated())
-                .andExpect(content().json(warningJson("A stable release already exists for foo.bar-1.0.0.\n" +
+                .andExpect(content().json(warningJson("A stable release already exists for foo.bar 1.0.0.\n" +
                         "To prevent update conflicts, we recommend that this pre-release uses 1.1.0 as its version instead.")));
     }
 
@@ -1027,7 +1509,7 @@ public class RegistryAPITest {
                 .contentType(MediaType.APPLICATION_OCTET_STREAM)
                 .content(bytes))
                 .andExpect(status().isCreated())
-                .andExpect(content().json(warningJson("A pre-release already exists for foo.bar-1.5.0.\n" +
+                .andExpect(content().json(warningJson("A pre-release already exists for foo.bar 1.5.0.\n" +
                         "To prevent update conflicts, we recommend that this stable release uses 1.6.0 as its version instead.")));
     }
 
@@ -1229,108 +1711,148 @@ public class RegistryAPITest {
         return new ObjectMapper().writeValueAsString(json);
     }
 
-    private void mockInactiveExtensionVersionDTO(String namespaceName, String extensionName) {
-        Mockito.when(repositories.findActiveExtensionVersionDTOsByExtensionName(null, extensionName, namespaceName))
-                .thenReturn(Collections.emptyList());
-        Mockito.when(repositories.findActiveExtensionVersionDTOsByNamespaceName(null, namespaceName))
-                .thenReturn(Collections.emptyList());
-        Mockito.when(repositories.findActiveExtensionVersionDTOsByExtensionName(null, extensionName))
-                .thenReturn(Collections.emptyList());
+    private void mockInactiveExtensionVersion(String namespaceName, String extensionName) {
+        var request = new QueryRequest();
+        request.namespaceName = namespaceName;
+        request.extensionName = extensionName;
+        request.size = 100;
+
+        Mockito.when(repositories.findActiveVersions(request))
+                .thenReturn(new PageImpl<>(Collections.emptyList(), Pageable.ofSize(request.size), 0));
     }
 
-    private void mockExtensionVersionDTOs() {
-        var namespaceId = 1L;
-        var namespacePublicId = "1234";
-        var namespaceName = "foo";
-        var extensionId = 2L;
-        var extensionName = "bar";
-        var id = 3L;
-        var version = "1.0.0";
-        var timestamp = LocalDateTime.parse("2000-01-01T10:00");
-        var displayName = "Foo Bar";
-
-        var versions = new ArrayList<ExtensionVersionDTO>();
-        var targetPlatforms = List.of("darwin-x64", "linux-x64", "alpine-arm64");
-        for(var i = 0; i < targetPlatforms.size(); i++) {
-            var targetPlatform = targetPlatforms.get(i);
-            versions.add(new ExtensionVersionDTO(
-                    namespaceId, namespacePublicId, namespaceName, extensionId, null, extensionName,
-                    null, 0, null, null,
-                    null, null, null, null, null, null,
-                    id + i, version, targetPlatform, false, false, timestamp, displayName,
-                    null, null, null, null, null, null, null,
-                    null, null, null, null, null, null, null,
-                    null
-            ));
-        }
-
-        var extensionPublicId = "5678";
-        Mockito.when(repositories.findActiveExtensionVersionDTOsByExtensionPublicId(null, extensionPublicId))
-                .thenReturn(versions);
-        Mockito.when(repositories.findActiveExtensionVersionDTOsByNamespacePublicId(null, namespacePublicId))
-                .thenReturn(versions);
-        Mockito.when(repositories.findActiveExtensionVersionDTOsByExtensionName(null, extensionName, namespaceName))
-                .thenReturn(versions);
-        Mockito.when(repositories.findActiveExtensionVersionDTOsByNamespaceName(null, namespaceName))
-                .thenReturn(versions);
-        Mockito.when(repositories.findActiveExtensionVersionDTOsByExtensionName(null, extensionName))
-                .thenReturn(versions);
-        Mockito.when(repositories.findAllActiveExtensionVersionDTOs(Set.of(extensionId), null))
-                .thenReturn(versions);
-
-        Mockito.when(repositories.findAllActiveReviewCountsByExtensionId(Set.of(extensionId)))
-                .thenReturn(Collections.emptyMap());
-        var fileTypes = List.of(DOWNLOAD, MANIFEST, ICON, README, LICENSE, CHANGELOG);
-        Mockito.when(repositories.findAllFileResourceDTOsByExtensionVersionIdAndType(List.of(id), fileTypes))
-                .thenReturn(Collections.emptyList());
-        Mockito.when(repositories.findAllNamespaceMembershipDTOs(List.of(namespaceId)))
-                .thenReturn(Collections.emptyList());
-    }
-
-    private ExtensionVersionDTO mockExtensionVersionDTO() {
-        var namespaceId = 1L;
-        var namespacePublicId = "1234";
-        var namespaceName = "foo";
-        var extensionId = 2L;
-        var extensionName = "bar";
-        var id = 3L;
-        var version = "1.0.0";
-        var timestamp = LocalDateTime.parse("2000-01-01T10:00");
-        var displayName = "Foo Bar";
-
-        var extVersion = new ExtensionVersionDTO(
-                namespaceId, namespacePublicId, namespaceName, extensionId, null, extensionName,
-                null, 0, null, null,
-                null, null, null, null, null, null, id,
-                version, TargetPlatform.NAME_UNIVERSAL, false, false, timestamp, displayName,
-                null, null, null, null, null, null, null,
-                null, null, null, null, null, null, null,
-                null
+    private List<ExtensionVersion> mockExtensionVersionVersionsTargetPlatforms() {
+        var values = List.of(
+                "1.0.0@darwin-x64", "2.0.0@darwin-x64",
+                "1.0.0@linux-x64", "2.0.0@linux-x64"
         );
 
-        var extensionPublicId = "5678";
-        Mockito.when(repositories.findActiveExtensionVersionDTOsByExtensionPublicId(null, extensionPublicId))
-                .thenReturn(List.of(extVersion));
-        Mockito.when(repositories.findActiveExtensionVersionDTOsByNamespacePublicId(null, namespacePublicId))
-                .thenReturn(List.of(extVersion));
-        Mockito.when(repositories.findActiveExtensionVersionDTOsByExtensionName(null, extensionName, namespaceName))
-                .thenReturn(List.of(extVersion));
-        Mockito.when(repositories.findActiveExtensionVersionDTOsByNamespaceName(null, namespaceName))
-                .thenReturn(List.of(extVersion));
-        Mockito.when(repositories.findActiveExtensionVersionDTOsByExtensionName(null, extensionName))
-                .thenReturn(List.of(extVersion));
-        Mockito.when(repositories.findAllActiveExtensionVersionDTOs(Set.of(extensionId), null))
-                .thenReturn(List.of(extVersion));
+        return mockExtensionVersions(null, values, (ev, value) -> {
+            var pieces = value.split("@");
+            ev.setVersion(pieces[0]);
+            ev.setTargetPlatform(pieces[1]);
+            ev.setTimestamp(LocalDateTime.parse("2000-01-01T10:00"));
+            ev.setDisplayName("Foo Bar");
+            return ev;
+        });
+    }
 
-        Mockito.when(repositories.findAllActiveReviewCountsByExtensionId(Set.of(extensionId)))
-                .thenReturn(Collections.emptyMap());
+    private List<ExtensionVersion> mockExtensionVersionVersionsTargetPlatforms(String targetPlatform) {
+        var versions = List.of("1.0.0", "2.0.0");
+        var values = versions.stream().map(version -> version + "@" + targetPlatform).collect(Collectors.toList());
+        return mockExtensionVersions(targetPlatform, values, (ev, value) -> {
+            var pieces = value.split("@");
+            ev.setVersion(pieces[0]);
+            ev.setTargetPlatform(pieces[1]);
+            ev.setTimestamp(LocalDateTime.parse("2000-01-01T10:00"));
+            ev.setDisplayName("Foo Bar");
+            return ev;
+        });
+    }
+
+    private List<ExtensionVersion> mockExtensionVersionVersions() {
+        var versions = List.of("1.0.0", "2.0.0", "3.0.0");
+        return mockExtensionVersions(null, versions, (ev, version) -> {
+            ev.setVersion(version);
+            ev.setTargetPlatform(TargetPlatform.NAME_UNIVERSAL);
+            ev.setTimestamp(LocalDateTime.parse("2000-01-01T10:00"));
+            ev.setDisplayName("Foo Bar");
+            return ev;
+        });
+    }
+
+    private List<ExtensionVersion> mockExtensionVersionTargetPlatforms() {
+        var targetPlatforms = List.of("darwin-x64", "linux-x64", "alpine-arm64");
+        return mockExtensionVersions(null, targetPlatforms, (ev, targetPlatform) -> {
+            ev.setVersion("1.0.0");
+            ev.setTargetPlatform(targetPlatform);
+            ev.setTimestamp(LocalDateTime.parse("2000-01-01T10:00"));
+            ev.setDisplayName("Foo Bar");
+            return ev;
+        });
+    }
+
+    private List<ExtensionVersion> mockExtensionVersions(String targetPlatform, List<String> values, BiFunction<ExtensionVersion, String, ExtensionVersion> setter) {
+        var namespace = new Namespace();
+        namespace.setId(1L);
+        namespace.setPublicId("1234");
+        namespace.setName("foo");
+
+        var extension = new Extension();
+        extension.setId(2L);
+        extension.setName("bar");
+        extension.setNamespace(namespace);
+
+        var versions = new ArrayList<ExtensionVersion>();
+        for(var i = 0; i < values.size(); i++) {
+            var extVersion = new ExtensionVersion();
+            extVersion.setId(3 + i);
+            extVersion = setter.apply(extVersion, values.get(i));
+            extVersion.setExtension(extension);
+            versions.add(extVersion);
+        }
+
+        Mockito.when(repositories.findActiveExtensionVersions(Set.of(extension.getId()), null))
+                .thenReturn(versions);
+        Mockito.when(repositories.findActiveVersionStringsSorted(Set.of(extension.getId()), null))
+                .thenReturn(versions.stream().collect(Collectors.groupingBy(ev -> ev.getExtension().getId(), Collectors.mapping(ev -> ev.getVersion(), Collectors.toList()))));
+        Mockito.when(repositories.findVersionStringsSorted(extension, targetPlatform, true))
+                .thenReturn(versions.stream().map(ExtensionVersion::getVersion).collect(Collectors.toList()));
+
         var fileTypes = List.of(DOWNLOAD, MANIFEST, ICON, README, LICENSE, CHANGELOG);
-        Mockito.when(repositories.findAllFileResourceDTOsByExtensionVersionIdAndType(Set.of(id), fileTypes))
+        Mockito.when(repositories.findFileResourcesByExtensionVersionIdAndType(List.of(3L), fileTypes))
                 .thenReturn(Collections.emptyList());
-        Mockito.when(repositories.findAllNamespaceMembershipDTOs(List.of(namespaceId)))
+        Mockito.when(repositories.findNamespaceMemberships(List.of(namespace.getId())))
                 .thenReturn(Collections.emptyList());
 
-        return extVersion;
+        return versions;
+    }
+
+    private void mockExtensionVersion() {
+        var namespace = new Namespace();
+        namespace.setId(1L);
+        namespace.setPublicId("1234");
+        namespace.setName("foo");
+
+        var extension = new Extension();
+        extension.setId(2L);
+        extension.setPublicId("5678");
+        extension.setName("bar");
+        extension.setNamespace(namespace);
+
+        var extVersion = new ExtensionVersion();
+        extVersion.setId(3L);
+        extVersion.setVersion("1.0.0");
+        extVersion.setTargetPlatform(TargetPlatform.NAME_UNIVERSAL);
+        extVersion.setTimestamp(LocalDateTime.parse("2000-01-01T10:00"));
+        extVersion.setDisplayName("Foo Bar");
+        extVersion.setExtension(extension);
+
+        Mockito.when(repositories.findActiveExtensionVersions(Set.of(extension.getId()), null))
+                .thenReturn(List.of(extVersion));
+
+        Mockito.when(repositories.findActiveVersions(any(QueryRequest.class)))
+                .then((Answer<Page<ExtensionVersion>>) invocation -> {
+                    var request = invocation.getArgument(0, QueryRequest.class);
+                    var versions = namespace.getPublicId().equals(request.namespaceUuid)
+                            || namespace.getName().equals(request.namespaceName)
+                            || extension.getPublicId().equals(request.extensionUuid)
+                            || extension.getName().equals(request.extensionName)
+                            ? List.of(extVersion)
+                            : Collections.<ExtensionVersion>emptyList();
+
+                    return new PageImpl<>(versions, Pageable.ofSize(100), versions.size());
+                });
+
+        var fileTypes = List.of(DOWNLOAD, MANIFEST, ICON, README, LICENSE, CHANGELOG);
+        Mockito.when(repositories.findFileResourcesByExtensionVersionIdAndType(Set.of(extVersion.getId()), fileTypes))
+                .thenReturn(Collections.emptyList());
+        Mockito.when(repositories.findNamespaceMemberships(List.of(namespace.getId())))
+                .thenReturn(Collections.emptyList());
+    }
+
+    private ExtensionVersion mockExtensionWithSignature() {
+        return mockExtension(TargetPlatform.NAME_UNIVERSAL, true);
     }
 
     private ExtensionVersion mockExtension() {
@@ -1338,6 +1860,10 @@ public class RegistryAPITest {
     }
 
     private ExtensionVersion mockExtension(String targetPlatform) {
+        return mockExtension(targetPlatform, false);
+    }
+
+    private ExtensionVersion mockExtension(String targetPlatform, boolean withSignature) {
         var namespace = new Namespace();
         namespace.setName("foo");
         namespace.setPublicId("1234");
@@ -1355,6 +1881,7 @@ public class RegistryAPITest {
         extVersion.setDisplayName("Foo Bar");
         extVersion.setExtension(extension);
         extension.getVersions().add(extVersion);
+        Mockito.when(entityManager.merge(extension)).thenReturn(extension);
         Mockito.when(repositories.findExtension("bar", "foo"))
                 .thenReturn(extension);
         Mockito.when(repositories.findVersion("1.0.0", targetPlatform, "bar", "foo"))
@@ -1364,9 +1891,9 @@ public class RegistryAPITest {
         Mockito.when(repositories.findActiveExtensions(namespace))
                 .thenReturn(Streamable.of(extension));
         Mockito.when(repositories.countMemberships(namespace, NamespaceMembership.ROLE_OWNER))
-                .thenReturn(0l);
+                .thenReturn(0L);
         Mockito.when(repositories.countActiveReviews(extension))
-                .thenReturn(0l);
+                .thenReturn(0L);
         Mockito.when(repositories.findNamespace("foo"))
                 .thenReturn(namespace);
         Mockito.when(repositories.findExtensions("bar"))
@@ -1381,9 +1908,30 @@ public class RegistryAPITest {
         download.setType(DOWNLOAD);
         download.setStorageType(STORAGE_DB);
         download.setName("extension-1.0.0.vsix");
-        Mockito.when(repositories.findFilesByType(eq(extVersion), anyCollection())).thenAnswer(invocation -> {
+        var signature = new FileResource();
+        if(withSignature) {
+            signature.setExtension(extVersion);
+            signature.setType(DOWNLOAD_SIG);
+            signature.setStorageType(STORAGE_DB);
+            signature.setName("extension-1.0.0.sigzip");
+        }
+        Mockito.when(entityManager.merge(download)).thenReturn(download);
+        Mockito.when(repositories.findFilesByType(anyCollection(), anyCollection())).thenAnswer(invocation -> {
+            Collection<ExtensionVersion> extVersions = invocation.getArgument(0);
             Collection<String> types = invocation.getArgument(1);
-            return types.contains(DOWNLOAD) ? Streamable.of(download) : Streamable.empty();
+            var extensionVersion = extVersions.iterator().hasNext()
+                    ? extVersions.iterator().next()
+                    : null;
+
+            var files = new ArrayList<>();
+            if(types.contains(DOWNLOAD) && download.getExtension().equals(extensionVersion)) {
+                files.add(download);
+            }
+            if(withSignature && types.contains(DOWNLOAD_SIG) && signature.getExtension().equals(extensionVersion)) {
+                files.add(signature);
+            }
+
+            return files;
         });
 
         return extVersion;
@@ -1416,7 +1964,10 @@ public class RegistryAPITest {
         resource.setType(FileResource.README);
         resource.setContent("Please read me".getBytes());
         resource.setStorageType(FileResource.STORAGE_DB);
+        Mockito.when(entityManager.merge(resource)).thenReturn(resource);
         Mockito.when(repositories.findFileByName(extVersion, "README"))
+                .thenReturn(resource);
+        Mockito.when(repositories.findFileByType(extVersion, FileResource.README))
                 .thenReturn(resource);
         return resource;
     }
@@ -1429,7 +1980,10 @@ public class RegistryAPITest {
         resource.setType(FileResource.CHANGELOG);
         resource.setContent("All notable changes is documented here".getBytes());
         resource.setStorageType(FileResource.STORAGE_DB);
+        Mockito.when(entityManager.merge(resource)).thenReturn(resource);
         Mockito.when(repositories.findFileByName(extVersion, "CHANGELOG"))
+                .thenReturn(resource);
+        Mockito.when(repositories.findFileByType(extVersion, FileResource.CHANGELOG))
                 .thenReturn(resource);
         return resource;
     }
@@ -1442,7 +1996,24 @@ public class RegistryAPITest {
         resource.setType(FileResource.LICENSE);
         resource.setContent("I never broke the Law! I am the law!".getBytes());
         resource.setStorageType(FileResource.STORAGE_DB);
+        Mockito.when(entityManager.merge(resource)).thenReturn(resource);
         Mockito.when(repositories.findFileByName(extVersion, "LICENSE"))
+                .thenReturn(resource);
+        Mockito.when(repositories.findFileByType(extVersion, FileResource.LICENSE))
+                .thenReturn(resource);
+        return resource;
+    }
+
+    private FileResource mockLatest() {
+        var extVersion = mockExtension();
+        var resource = new FileResource();
+        resource.setExtension(extVersion);
+        resource.setName("DOWNLOAD");
+        resource.setType(FileResource.DOWNLOAD);
+        resource.setContent("latest download".getBytes());
+        resource.setStorageType(FileResource.STORAGE_DB);
+        Mockito.when(entityManager.merge(resource)).thenReturn(resource);
+        Mockito.when(repositories.findFileByType(extVersion, FileResource.DOWNLOAD))
                 .thenReturn(resource);
         return resource;
     }
@@ -1482,19 +2053,18 @@ public class RegistryAPITest {
     private List<Extension> mockSearch() {
         var extVersion = mockExtension();
         var extension = extVersion.getExtension();
-        extension.setId(1l);
+        extension.setId(1L);
         var entry1 = new ExtensionSearch();
         entry1.id = 1;
-        var searchHit = new SearchHit<ExtensionSearch>("0", "1", 1.0f, null, null, entry1);
-        var searchHits = new SearchHitsImpl<ExtensionSearch>(1, TotalHitsRelation.EQUAL_TO, 1.0f, "1",
-                Arrays.asList(searchHit), new Aggregations(Collections.emptyList()));
+        var searchHit = new SearchHit<>("0", "1", null, 1.0f, null, null, null, null, null, null, entry1);
+        var searchHits = new SearchHitsImpl<>(1, TotalHitsRelation.EQUAL_TO, 1.0f, "1", null, List.of(searchHit), null, null);
         Mockito.when(search.isEnabled())
                 .thenReturn(true);
         var searchOptions = new ISearchService.Options("foo", null, null, 10, 0, "desc", "relevance", false);
-        Mockito.when(search.search(searchOptions, PageRequest.of(0, 10)))
+        Mockito.when(search.search(searchOptions))
                 .thenReturn(searchHits);
-        Mockito.when(entityManager.find(Extension.class, 1l))
-                .thenReturn(extension);
+        Mockito.when(repositories.findExtensions(Set.of(extension.getId())))
+                .thenReturn(Streamable.of(extension));
         return Arrays.asList(extension);
     }
 
@@ -1540,11 +2110,11 @@ public class RegistryAPITest {
                     .thenReturn(extVersion);
         }
         Mockito.when(repositories.countActiveReviews(any(Extension.class)))
-                .thenReturn(0l);
+                .thenReturn(0L);
         Mockito.when(repositories.findVersions(any(Extension.class)))
                 .thenReturn(Streamable.empty());
-        Mockito.when(repositories.findFilesByType(any(ExtensionVersion.class), anyCollection()))
-                .thenReturn(Streamable.empty());
+        Mockito.when(repositories.findFilesByType(anyCollection(), anyCollection()))
+                .thenReturn(Collections.emptyList());
         Mockito.when(repositories.findVersions(eq("1.0.0"), any(Extension.class)))
                 .thenReturn(Streamable.empty());
         if (mode.equals("owner")) {
@@ -1555,11 +2125,11 @@ public class RegistryAPITest {
             Mockito.when(repositories.findMemberships(namespace, NamespaceMembership.ROLE_OWNER))
                     .thenReturn(Streamable.of(ownerMem));
             Mockito.when(repositories.countMemberships(namespace, NamespaceMembership.ROLE_OWNER))
-                    .thenReturn(1l);
+                    .thenReturn(1L);
             Mockito.when(repositories.findMembership(token.getUser(), namespace))
                     .thenReturn(ownerMem);
-            Mockito.when(repositories.countMemberships(token.getUser(), namespace))
-                    .thenReturn(1l);
+            Mockito.when(repositories.isVerified(namespace, token.getUser()))
+                    .thenReturn(true);
         } else if (mode.equals("contributor") || mode.equals("sole-contributor") || mode.equals("existing")) {
             var contribMem = new NamespaceMembership();
             contribMem.setUser(token.getUser());
@@ -1567,8 +2137,8 @@ public class RegistryAPITest {
             contribMem.setRole(NamespaceMembership.ROLE_CONTRIBUTOR);
             Mockito.when(repositories.findMembership(token.getUser(), namespace))
                     .thenReturn(contribMem);
-            Mockito.when(repositories.countMemberships(token.getUser(), namespace))
-                    .thenReturn(1l);
+            Mockito.when(repositories.isVerified(namespace, token.getUser()))
+                    .thenReturn(true);
             if (mode.equals("contributor")) {
                 var otherUser = new UserData();
                 otherUser.setLoginName("other_user");
@@ -1578,13 +2148,13 @@ public class RegistryAPITest {
                 ownerMem.setRole(NamespaceMembership.ROLE_OWNER);
                 Mockito.when(repositories.findMemberships(namespace, NamespaceMembership.ROLE_OWNER))
                         .thenReturn(Streamable.of(ownerMem));
-                Mockito.when(repositories.countMemberships(namespace, NamespaceMembership.ROLE_OWNER))
-                        .thenReturn(1l);
+                Mockito.when(repositories.isVerified(namespace, token.getUser()))
+                        .thenReturn(true);
             } else {
                 Mockito.when(repositories.findMemberships(namespace, NamespaceMembership.ROLE_OWNER))
                     .thenReturn(Streamable.empty());
-                Mockito.when(repositories.countMemberships(namespace, NamespaceMembership.ROLE_OWNER))
-                        .thenReturn(0l);
+                Mockito.when(repositories.isVerified(namespace, token.getUser()))
+                        .thenReturn(false);
             }
         } else if (mode.equals("privileged") || mode.equals("unrelated")) {
             var otherUser = new UserData();
@@ -1596,7 +2166,7 @@ public class RegistryAPITest {
             Mockito.when(repositories.findMemberships(namespace, NamespaceMembership.ROLE_OWNER))
                     .thenReturn(Streamable.of(ownerMem));
             Mockito.when(repositories.countMemberships(namespace, NamespaceMembership.ROLE_OWNER))
-                    .thenReturn(1l);
+                    .thenReturn(1L);
             if (mode.equals("privileged")) {
                 token.getUser().setRole(UserData.ROLE_PRIVILEGED);
             }
@@ -1604,8 +2174,11 @@ public class RegistryAPITest {
             Mockito.when(repositories.findMemberships(namespace, NamespaceMembership.ROLE_OWNER))
                     .thenReturn(Streamable.empty());
             Mockito.when(repositories.countMemberships(namespace, NamespaceMembership.ROLE_OWNER))
-                    .thenReturn(0l);
+                    .thenReturn(0L);
         }
+
+        Mockito.when(entityManager.merge(any(Extension.class)))
+                .then((Answer<Extension>) invocation -> invocation.getArgument(0, Extension.class));
     }
 
     private String reviewJson(Consumer<ReviewJson> content) throws JsonProcessingException {
@@ -1690,6 +2263,7 @@ public class RegistryAPITest {
     }
     
     @TestConfiguration
+    @Import(SecurityConfig.class)
     static class TestConfig {
         @Bean
         TransactionTemplate transactionTemplate() {
@@ -1728,6 +2302,20 @@ public class RegistryAPITest {
 
         @Bean
         ExtensionJsonCacheKeyGenerator extensionJsonCacheKeyGenerator() { return new ExtensionJsonCacheKeyGenerator(); }
+
+        @Bean
+        VersionService versionService() {
+            return new VersionService();
+        }
+
+        @Bean
+        LatestExtensionVersionCacheKeyGenerator latestExtensionVersionCacheKeyGenerator() {
+            return new LatestExtensionVersionCacheKeyGenerator();
+        }
+
+        @Bean
+        PublishExtensionVersionHandler publishExtensionVersionHandler() {
+            return new PublishExtensionVersionHandler();
+        }
     }
-    
 }
